Changed some random JVM config for native netty epoll